# fact.rs

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
examples/: gps.rs  readme.rs  test_se3.rs  test_so3.rs
factrs-bench/: Cargo.toml
factrs-bench/benches/: g2o-2d.rs  g2o-3d.rs
factrs-bench/cpp/: CMakeLists.txt  bench.cpp
factrs-proc/: Cargo.toml
factrs-proc/src/: fac.rs  lib.rs  noise.rs  residual.rs  variable.rs
src/: lib.rs  rerun.rs  utils.rs
src/containers/: factor.rs  graph.rs  symbol.rs  values.rs
src/linalg/: nalgebra_wrap.rs
src/noise/: gaussian.rs
src/optimizers/: macros.rs
src/residuals/: mod.rs  traits.rs
src/robust/: mod.rs
src/variables/: macros.rs  mod.rs  se2.rs  se3.rs  so2.rs  so3.rs  traits.rs  vector.rs
tests/: custom_key.rs  custom_variable.rs
